@@ -1,3 +1,10 @@
+2007-09-13  Reinhard Max  <max@suse.de>
+
+	* tkchat.tcl: Moved the emoticons to the web and added code for
+	downloading and caching them in .tkchatrc. Downloading new and
+	changed emoticons is automatically done at startup and can be
+	manually triggered at runtime from the Emoticons menu.
+	
 2007-09-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl:  Extracted whiteboard code to a separate file
